force-app/main/default/objects/vlocity_cmt__Premises__c/fields/AddressExt__c.field-meta.xml
<CustomField>
    <fullName>AddressExt__c</fullName>
    <label>Adresszusatz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>