force-app/main/default/objects/vlocity_cmt__Premises__c/fields/AddressId__c.field-meta.xml
<CustomField>
    <fullName>AddressId__c</fullName>
    <label>Adress ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>