force-app/main/default/objects/vlocity_cmt__Premises__c/fields/CityExt__c.field-meta.xml
<CustomField>
    <fullName>CityExt__c</fullName>
    <label>Stadtteil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>