force-app/main/default/objects/vlocity_cmt__Premises__c/fields/FiberPotentialId__c.field-meta.xml
<CustomField>
    <fullName>FiberPotentialId__c</fullName>
    <label>Glasfaser Potenzial ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>