force-app/main/default/objects/vlocity_cmt__Premises__c/fields/HouseNo__c.field-meta.xml
<CustomField>
    <fullName>HouseNo__c</fullName>
    <label>Hausnummer</label>
    <length>4</length>
    <type>Text</type>
</CustomField>