force-app/main/default/objects/vlocity_cmt__Premises__c/fields/HouseNoExt__c.field-meta.xml
<CustomField>
    <fullName>HouseNoExt__c</fullName>
    <label>Hausnummer Zusatz</label>
    <length>6</length>
    <type>Text</type>
</CustomField>