force-app/main/default/objects/vlocity_cmt__Premises__c/fields/SPRIStatus__c.field-meta.xml
<CustomField>
    <fullName>SPRIStatus__c</fullName>
    <label>SPRI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPRI_Statuses</valueSetName>
    </valueSet>
</CustomField>