force-app/main/default/objects/vlocity_cmt__Premises__c/listViews/Meine_Premises_letzte_Woche.listView-meta.xml
<ListView>
    <fullName>Meine_Premises_letzte_Woche</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>vlocity_cmt__StreetAddress__c</columns>
    <columns>HouseNo__c</columns>
    <columns>HouseNoExt__c</columns>
    <columns>AddressExt__c</columns>
    <columns>vlocity_cmt__PostalCode__c</columns>
    <columns>vlocity_cmt__City__c</columns>
    <columns>vlocity_cmt__State__c</columns>
    <columns>AddressId__c</columns>
    <columns>FiberPotentialId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Meine Premises letzte Woche</label>
</ListView>