force-app/main/default/objects/vlocity_cmt__Premises__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>vlocity_cmt__StreetAddress__c</columns>
    <columns>HouseNo__c</columns>
    <columns>HouseNoExt__c</columns>
    <columns>AddressExt__c</columns>
    <columns>vlocity_cmt__PostalCode__c</columns>
    <columns>vlocity_cmt__City__c</columns>
    <columns>vlocity_cmt__State__c</columns>
    <columns>AddressId__c</columns>
    <columns>FiberPotentialId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Premises</label>
</ListView>